--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,4 +4,5 @@
 server.name: kibana
 server.host: "0"
 elasticsearch.url: http://elasticsearch:9200
+elasticsearch.requestTimeout: 90000
 xpack.monitoring.ui.container.elasticsearch.enabled: true
